--- a/view/operation_line_form.xml
+++ b/view/operation_line_form.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<form string="Operation Line" col="4">
-    <label name="operation"/>
-    <field name="operation"/>
-    <newline/>
-    <label name="start"/>
-    <field name="start"/>
-    <label name="end"/>
-    <field name="end"/>
+<form string="Operation Tracking" col="4">
     <label name="quantity"/>
     <field name="quantity"/>
     <label name="uom"/>
