--- a/view/route_operation_form.xml
+++ b/view/route_operation_form.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<form string="Route Operation">
-    <label name="route"/>
-    <field name="route"/>
-    <newline/>
-    <label name="name"/>
-    <field name="name"/>
-    <label name="work_center"/>
-    <field name="work_center"/>
-    <label name="sequence"/>
-    <field name="sequence"/>
-</form>
+<data>
+    <xpath expr="/form/label[@name='work_center_category']" position="before">
+        <label name="operation_type"/>
+        <field name="operation_type"/>
+    </xpath>
+</data>
