--- a/view/operation_line_list.xml
+++ b/view/operation_line_list.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<tree string="Operation Line">
+<tree string="Operation Tracking">
     <field name="operation"/>
-    <field name="start"/>
-    <field name="end"/>
     <field name="quantity"/>
     <field name="uom"/>
 </tree>
