--- a/view/operation_tracking_list.xml
+++ b/view/operation_tracking_list.xml
@@ -2,7 +2,7 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 
-<tree string="Operation Tracking">
+<tree>
      <field name="operation"/>
      <field name="quantity"/>
      <field name="uom"/>
