--- a/view/operation_list.xml
+++ b/view/operation_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<tree string="Operation" sequence="sequence">
+<tree sequence="sequence">
     <field name="production"/>
     <field name="operation_type"/>
     <field name="work_center"/>
