--- a/view/operation_form.xml
+++ b/view/operation_form.xml
@@ -22,8 +22,8 @@
         <field name="state"/>
         <group col="6" colspan="2" id="buttons">
             <button name="wait"/>
-            <button name="run" icon="tryton-go-next"/>
-            <button name="done" icon="tryton-go-next"/>
+            <button name="run" icon="tryton-forward"/>
+            <button name="done" icon="tryton-forward"/>
         </group>
     </group>
 </form>
