--- a/view/operation_tracking_form.xml
+++ b/view/operation_tracking_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<form col="4">
+<form>
      <label name="quantity"/>
      <field name="quantity"/>
      <label name="uom"/>
