--- a/view/operation_form.xml
+++ b/view/operation_form.xml
@@ -21,6 +21,7 @@
         <label name="state"/>
         <field name="state"/>
         <group col="6" colspan="2" id="buttons">
+            <button name="cancel" icon="tryton-cancel"/>
             <button name="wait"/>
             <button name="run" icon="tryton-forward"/>
             <button name="done" icon="tryton-forward"/>
