Allow to choose by configuration if a production will be done with the last operation done.

--- a/view/configuration_form.xml
+++ b/view/configuration_form.xml
@@ -6,5 +6,7 @@
         <newline/>
         <label name="check_state_operation"/>
         <field name="check_state_operation"/>
+        <label name="allow_done_production"/>
+        <field name="allow_done_production"/>
     </xpath>
 </data>
