Rename Uom to Unit for bill of material

--- a/view/production_form.xml
+++ b/view/production_form.xml
@@ -7,7 +7,7 @@
             <field name="operations" colspan="4"/>
         </page>
     </xpath>
-    <xpath expr="/form/field[@name='uom']" position="after">
+    <xpath expr="/form/field[@name='unit']" position="after">
         <label name="route"/>
         <field name="route"/>
     </xpath>
