--- a/view/production_form.xml
+++ b/view/production_form.xml
@@ -2,7 +2,7 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='outputs']" position="after">
+    <xpath expr="/form/notebook/page[@name='outputs']" position="after">
         <page id="operations" string="Operations">
             <field name="operations" colspan="4"/>
         </page>
